mik's suggestions on how to improve readability of the fdr section

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -262,9 +262,9 @@ fdr_low_tab %>%
   #kableExtra::group_rows("Zeng's E", 17, 20) %>%
   kableExtra::footnote("Percentile is the more conservative FDR quantile bin of the permuted data that was equivalent to either the 1st (lower tail) or 99th (upper tail) percentile in the observed data.", general_title = "", threeparttable = TRUE )
 ```
-In order to control for false positives the \gls{fdr} was calculated for \gls{td}, \gls{flf}, \gls{fwh}, and \gls{ze}. To calculate the \gls{fdr}, 5000 permutations were generated, each randomly shuffling the genotypes of markers by marker position (i.e. shuffling rows only). For each permutation, for each statistic, the values for quantiles 'bins' were calculated for both tails of the distribution. The 'bins' ranged from 0.01 to 0.1% at 0.01 increments, 0.1 to 1% at 0.1% increments, 1 to 5% at 1% increments, and 10%. The median and 95% confidence intervals were calculated for the values of the quantile 'bins' across the permutations (i.e. the median, 2.5^th^ and 97.5^th^ percentiles for the values of the 1^st^ percentile bin from all permutations). The enrichment for each quantile bin was then calculated by comparing the number of windows that were observed in the data compared to the number expected from the permutations. \Gls{fdr} was then estimated by using the value for the 1^st^ or 99^th^ percentile and finding the nearest conservative quantile bin using the median, that was either larger for the lower tail, or smaller for the upper tail and taking the inverse of enrichment for the bin (Table \@ref(tab:fdrpol)). This estimate will be conservative compared to the true \gls{fdr}.
+In order to control for false positives, the \gls{fdr} was calculated for \gls{td}, \gls{flf}, \gls{fwh}, and \gls{ze}. To calculate the \gls{fdr}, 5000 permutations of the genotype data were performed, each randomly shuffling the genotypes of markers by marker position (i.e. shuffling rows only). This process re-defined the marker composition of each window, requiring new selection statistics to be calculated for each window. This procedure therefore, generated a new distribution for values of each selection statistic (per permutation) under the null hypothesis of no association between marker genotype and genomic position. For each permutation, for each statistic, the values for quantile 'bins' were calculated for both tails of the distribution. The 'bins' ranged from 0.01 to 0.1% in 0.01 increments, 0.1 to 1% in 0.1% increments, 1 to 5% in 1% increments, and 10%. The median and 95% confidence intervals were calculated for the values of the quantile 'bins' across the permutations (i.e., the median, 2.5^th^ and 97.5^th^ percentiles for the values of the 1^st^ percentile bin from all permutations). The enrichment for each quantile bin was then calculated by comparing the number of windows that were observed in the data compared to the number expected from the permutations. \Gls{fdr} was then estimated by using the value for the 1^st^ or 99^th^ percentile and finding the nearest conservative quantile bin using the median, that was either larger for the lower tail, or smaller for the upper tail and taking the inverse of enrichment for the bin (Table \@ref(tab:fdrpol)). As a result, the estimate will be conservative compared to the true \gls{fdr}, but will still maintain \gls{fdr} control.
 
-The \gls{fdr} for \gls{ze} was 1.0 for all Polynesian populations in the lower end of the distribution and the 1st percentile of the data fell within the 2nd percentile bin from the permutations. Whereas, for \gls{td} and \gls{fwh} the quantile bin was `r fdr_low_tab %>%filter(stat %in% c('Tajima.D','Fay.Wu.H')) %>% summarise(min(lowest_quant))`%, with the maximum upper confidence interval being `r fdr_low_tab %>%filter(stat %in% c('Tajima.D','Fay.Wu.H')) %>% summarise(three_dp(max(upperCI)))`. For the purpose of reporting on individual statistics, a threshold of 0.1 was applied, to reduce the expected false positive rate to be less than 1 in 10 on average.  \Gls{flf} and \gls{ze} both had an \gls{fdr} above this threshold for the Polynesian populations and will be reported on only as additional evidence when they overlap with other results or were a region of consecutively depressed score.
+The \gls{fdr} for \gls{ze} was 1.0 for all Polynesian populations in the lower end of the distribution and the 1st percentile of the data fell within the 2^nd^ percentile bin from the permutations. This means that the 1st percentile threshold from the observed \gls{ze} fell between the 1^st^ and 2^nd^ percentile of the null distribution, and was entirely within the 95% confidence interval. Whereas, for \gls{td} and \gls{fwh} the quantile bin was `r fdr_low_tab %>%filter(stat %in% c('Tajima.D','Fay.Wu.H')) %>% summarise(min(lowest_quant))`%, with the maximum upper confidence interval being `r fdr_low_tab %>%filter(stat %in% c('Tajima.D','Fay.Wu.H')) %>% summarise(three_dp(max(upperCI)))`. For the purpose of reporting on individual statistics, a threshold of 0.1 was applied, to reduce the expected false positive rate to be less than 1 in 10 on average.  \Gls{flf} and \gls{ze} both had an \gls{fdr} above this threshold for the Polynesian populations and will be reported on only as additional evidence when they overlap with other results or were a region of consecutively depressed score.
 
 
 ### Comparison with prior publications
